--- a/styles/planets.css
+++ b/styles/planets.css
@@ -6,10 +6,24 @@ body {
   margin: 50px 20px 50px 20px;
 }
 
+a {
+  color: #f1c79d;
+  text-decoration: none;
+}
+
 h2 {
   color: #f1c79d;
   font-size: 28px;
   font-weight: bold;
+}
+
+h4 {
+  font-family: var(--default-font-family);
+  font-size: 22px;
+}
+
+h5 {
+  font-size: 25px;
 }
 
 li {
@@ -18,6 +32,9 @@ li {
 
 p {
   margin-top: -50px;
+}
+ul {
+  padding-right: 2rem;
 }
 
 .carousel {
@@ -80,18 +97,25 @@ p {
 }
 .description-box {
   background-color: rgb(161, 156, 156);
-  padding: 35px;
+  padding: 15px 10px;
   line-height: 1.7;
   margin-top: 0px;
 }
 .description-box:hover {
-  background-color: #212529;
+  background-color: #4c5155;
+  transition: 0.8s ease-in-out;
 }
 .description-box p {
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.7;
   margin-top: 2px;
   text-indent: 50px;
+}
+
+.explore-button:hover {
+  background-color: rgb(161, 156, 156);
+  color: #f6f1e9;
+  transition: 0.8 ease-in-out;
 }
 
 .navbar {
